deploy/istio/niche-api-dep-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: niche-api-v2
  labels:
    app: niche-api
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: niche-api
      version: v2
  template:
    metadata:
      labels:
        app: niche-api
        version: v2
    spec:
      containers:
      - name: niche-api
        image: soline74/niche-api:dev-f0c7b9e
        resources:
          limits:
            cpu: 300m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
