deploy/istio/niche-web-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: niche-web
  labels:
    app: niche-web
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: niche-web
      version: v1
  template:
    metadata:
      labels: 
        app: niche-web
        version: v1
    spec:
      containers:
      - name: niche-web
        image: soline74/niche-web:dev-81fbdd3
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 300m
            memory: 200Mi
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
